# robot-ideas-backend

./: Cargo.toml  README.md  Rocket.toml
migrations/2021-08-11-051750_create-ideas/: down.sql  up.sql
src/: connection.rs  handler.rs  main.rs  model.rs  repository.rs  router.rs  schema.rs
