[package]
name = "robot-ideas"
version = "0.1.0"
authors = ["Khalid Ali <khalludi123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
env_logger = "0.5.12"
log = "0.4.6"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_codegen = "0.4.5"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
